kubernetes/apps/external/skktest/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: skktest
  namespace: external
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 81
